More Tool Stats (#187)
* Add other farming fortune reforges

* Display FFF and cultivating
